deployment/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-wallet
spec:
  selector:
    matchLabels:
      app: wallet
      ver: v1
  replicas: 2
  template:
    metadata:
      name: pod-wallet
      labels:
        app: wallet
        ver: v1
    spec:
      containers:
        - name: wallet
          image: rkdals213/wallet
          imagePullPolicy: Always
          ports:
            - name: port-wallet
              containerPort: 10001
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 500m
              memory: 1024Mi
