deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallet
  labels:
    app: wallet
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: wallet
